        * Add Mogstored::HTTPServer::None to allow using mogstored
        with unmanaged backend DAV servers.

        * Add experimental cmd_edit_file. Client requires DAV MOVE and
        partial PUT on the store to use it.

        * make mogstored and mogilefsd use the now-bundled dependency
          Perl modules as a last resort, unless MOGILE_NO_BUILTIN_DEPS
          environment variable is true.  this makes it easier for people
          to use mogilefs, without dependency hell.  distros/packagers
          are expected to ignore (or scoff at) this "feature".  but
          easier for people working from tarball/svn releases.  bundled
          dependencies will be updated over time, as needed.

        * Bring the SQLite store up to date

        * Increase the timeouts in the test suite

        * In the test suite, also search for mogadm in /usr/local/bin/ and
          /usr/local/sbin (spotted by Dean Wilson)

        * SCHEMA VERSION 10:  'replpolicy' column on 'class' table.
          it's safe to --ignore-schema-version and run this mogilefsd
          against an older schema.  new column enables per-class
          pluggable replication policies.  it was always
          abstract, but not easy to plugin your own alternatives.
          see doc/pluggable-replication-policies.txt

        * add start of a MogileFS::ReplicationPolicy::Union implementation

        * fix crash in queryworker's create_open command, when a device
          has its directory made on a mogile storage node (the host of
          which is being monitored by the 'monitor' process), but the
          device isn't registered in the devices table yet.

2007-07-03: Release version 2.17

        * get_paths command now takes a pathcount option, defaulting to
          2, instead of having a hardcoded constant of 2. This allows
          requesting more than 2 paths to a file.

        * make fsck log over-replicated files as policy violations.  it