@@ -717,11 +717,12 @@ sub state_change {
     my ($what, $whatid, $state, $exclude) = @_;
     my $key = "$what-$whatid";
     foreach my $child (values %child) {
-        next if $exclude && $child == $exclude;
         my $old = $child->{known_state}{$key} || "";
         if ($old ne $state) {
             $child->{known_state}{$key} = $state;
-            $child->write(":state_change $what $whatid $state\r\n");
+
+            $child->write(":state_change $what $whatid $state\r\n")
+                unless $exclude && $child == $exclude;
         }
     }
 }
